# blockfactory

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  ci_env.yml  index.html  pixi.toml
.ci/: Dockerfile  env-file  script.sh
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: ci.yml  conda-ci.yml  gh-pages.yml
cmake/: AddGeneratedCodeLib.cmake  BlockFactoryPlugin.cmake  ExtraPackageConfigVars.cmake.in  FindMatlab.cmake  SimulinkCoderSetup.cmake  TargetCompileWarnings.cmake  TargetFromGeneratedCode.cmake  UnitTesting.cmake
devel/doxygen/: _block_8h__incl.md5  _block_8h_source.html  _block_information_8h__dep__incl.md5  _block_information_8h_source.html  _coder_block_information_8h__incl.map  _coder_block_information_8h__incl.md5  _coder_block_information_8h_source.html  _convert_std_vector_8h.html  _convert_std_vector_8h_source.html  _factory_singleton_8h__incl.map  _factory_singleton_8h__incl.md5  _factory_singleton_8h_source.html  _generated_code_wrapper_8h.html  _log_8h.html  _log_8h__dep__incl.map  _log_8h__dep__incl.md5  _log_8h_source.html  _parameter_8h.html  _parameter_8h__dep__incl.map  _parameters_8h__dep__incl.md5  _parameters_8h__incl.map  _parameters_8h__incl.md5  _port_8h.html  _port_8h__dep__incl.md5  _port_8h__incl.map  _signal_8h.html  _signal_8h__incl.md5  _signal_8h_source.html  _simulink_block_information_8h__incl.map  _simulink_block_information_8h_source.html  _simulink_block_information_impl_8h.html  annotated.html  classblockfactory_1_1coder_1_1_coder_block_information-members.html  classblockfactory_1_1coder_1_1_coder_block_information.html  classblockfactory_1_1coder_1_1_coder_block_information__inherit__graph.map  classblockfactory_1_1coder_1_1_generated_code_wrapper.html  classblockfactory_1_1core_1_1_block.js  classblockfactory_1_1core_1_1_block_information.js  classblockfactory_1_1core_1_1_block_information__inherit__graph.map  classblockfactory_1_1core_1_1_block_information__inherit__graph.md5  (+83 more)
devel/mkdocs/: index.html  sitemap.xml
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.in  index.md
doc/mkdocs/: CMakeLists.txt  mkdocs.yml
doc/mkdocs/data/: about.md  autogenerate_code.md  create_new_library.md  index.md  install.md  license.md  tutorial_intro.md
doc/release/: template.md  v0.8.md
doxygen/: _block_8h.html  _block_8h__incl.map  _block_8h__incl.md5  _block_8h_source.html  _block_information_8h.html  _block_information_8h__dep__incl.map  _block_information_8h__dep__incl.md5  _block_information_8h__incl.map  _block_information_8h__incl.md5  _block_information_8h_source.html  _coder_block_information_8h.html  _coder_block_information_8h__incl.map  _coder_block_information_8h__incl.md5  _coder_block_information_8h_source.html  _convert_std_vector_8h.html  _convert_std_vector_8h__incl.map  _convert_std_vector_8h__incl.md5  _convert_std_vector_8h_source.html  _factory_singleton_8h.html  _factory_singleton_8h__incl.map  _factory_singleton_8h__incl.md5  _factory_singleton_8h_source.html  _generated_code_wrapper_8h.html  _generated_code_wrapper_8h__incl.map  _generated_code_wrapper_8h__incl.md5  _generated_code_wrapper_8h_source.html  _log_8h.html  _log_8h__dep__incl.map  _log_8h__dep__incl.md5  _log_8h__incl.map  _log_8h__incl.md5  _log_8h_source.html  _parameter_8h.html  _parameter_8h__dep__incl.map  _parameter_8h__dep__incl.md5  _parameter_8h__incl.map  _parameter_8h__incl.md5  _parameter_8h_source.html  _parameters_8h.html  _parameters_8h__dep__incl.map  (+231 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  enums_0.js  enums_1.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_6.js  (+37 more)
example/: .clang-format  CMakeLists.txt  README.md
example/include/: SignalMath.h
example/matlab/: AutogenerationExample.mdl  CMakeLists.txt  ExampleToolbox.slx  Model.mdl  slblocks.m
example/matlab/AutogenerationExample_grt_rtw/: AutogenerationExample.cpp  AutogenerationExample.h  AutogenerationExample.mk  AutogenerationExample_private.h  AutogenerationExample_types.h  codeInfo.mat  codedescriptor.dmr  defines.txt  modelsources.txt  multiword_types.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
example/src/: Factory.cpp  SignalMath.cpp  main.cpp
matlab/: BlockFactory.tlc  CMakeLists.txt
mkdocs/: 404.html  index.html  sitemap.xml
sources/: CMakeLists.txt
sources/Coder/: CMakeLists.txt
sources/Coder/include/BlockFactory/Coder/: CoderBlockInformation.h  GeneratedCodeWrapper.h
sources/Coder/src/: CoderBlockInformation.cpp
sources/Core/: CMakeLists.txt
sources/Core/include/BlockFactory/Core/: Block.h  BlockInformation.h  ConvertStdVector.h  FactorySingleton.h  Log.h  Parameter.h  Parameters.h  Port.h  Signal.h
sources/Core/src/: Block.cpp  BlockInformation.cpp  ConvertStdVector.cpp  FactorySingleton.cpp  Log.cpp  Parameter.cpp  Parameters.cpp  Signal.cpp
sources/Mex/: CMakeLists.txt
sources/Mex/include/BlockFactory/Mex/: SimulinkBlockInformation.h
sources/Mex/include/BlockFactory/Mex/Private/: SimulinkBlockInformationImpl.h
sources/Mex/src/: BlockFactory.cpp  SimulinkBlockInformation.cpp  SimulinkBlockInformationImpl.cpp
sources/Simulink/: CMakeLists.txt
sources/Simulink/include/BlockFactory/Simulink/: SimulinkBlockInformation.h
sources/Simulink/include/BlockFactory/Simulink/Private/: SimulinkBlockInformationImpl.h
sources/Simulink/src/: BlockFactory.cpp  SimulinkBlockInformation.cpp  SimulinkBlockInformationImpl.cpp
sources/SimulinkCoder/: CMakeLists.txt
sources/SimulinkCoder/include/BlockFactory/SimulinkCoder/: CoderBlockInformation.h
sources/SimulinkCoder/src/: CoderBlockInformation.cpp
sources/Tools/: CMakeLists.txt
sources/Tools/src/: BlockfactoryExists.cpp
tests/: CMakeLists.txt  main.cpp
tests/Core/: SignalUnitTest.cpp
tests/Factory/: FactoryUnitTest.cpp  MockPlugin.cpp  MockPlugin.h
(+56 files in other folders)
